# pastaAnimations

./: CMakeLists.txt  README.md  vcpkg.json
pastaAnimations/: CMakeLists.txt  pastaAnimations.cpp  pastaAnimations.h
shaders/: vert.glsl
